<resources>
    <string name="app_name">MyPass</string>

    <!-- MyPass API -->
    <string name="mypass_api_server_prod" translatable="false">https://prod-mypass-web.herokuapp.com/api/</string>
    <string name="mypass_api_server_staging" translatable="false">https://staging-mypass-web.herokuapp.com/api/</string>
    <string name="mypass_api_server_dev" translatable="false">https://dev-mypass-web.herokuapp.com/api/</string>
    <string name="mypass_api_server_local" translatable="false">http://10.0.2.1:8080/api/</string>

    <!-- Facebook login -->
    <string name="fb_login_protocol_scheme" translatable="false">fb780837828967053</string>
    <string name="facebook_app_id" translatable="false">780837828967053</string>

    <!-- Google login -->
    <string name="default_web_client_id" translatable="false">907608270145-ne25o32curu5at5ij3n0gbjfc17nqju5.apps.googleusercontent.com</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_login_with_facebook">Facebook</string>
    <string name="action_login_with_google">Google</string>
    <string name="action_login_with_facebook_long">Sign in with Facebook</string>
    <string name="action_login_with_google_long">Sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loginErrorMsg">Login error</string>
    <string name="recoverErrorMsg">Error recovering password</string>
    <string name="registerErrorMsg">Sign up error</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_up">Don\'t have an account?</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_password_not_match">Repeat password not match</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description (Optional)</string>
    <string name="prompt_number">Number (Optional)</string>
    <string name="action_save">Save</string>
    <string name="save_error">Save error</string>
    <string name="delete_error">Delete error</string>
    <string name="error_mandatory_field">Mandatory field</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="error_getting_items">Error getting items</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="dependency_load_error">Error getting resources</string>
    <string name="title_activity_account">Account</string>
    <string name="action_change">Change</string>
    <string name="change_password">Change password</string>
    <string name="promt_last_name">Last name</string>
    <string name="promt_first_name">First name</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_last_name">Invalid last name</string>
    <string name="save_success">Save success</string>
    <string name="my_account">My account</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="error_existing_email">This account is already registered</string>
    <string name="activate_account_first">Confirm your email first</string>
    <string name="action_recover">Recover</string>
    <string name="title_activity_recover_password">Recover password</string>
    <string name="recover_password">Forgot your password?</string>
    <string name="recover_password_success">We have sent you an email with password recovery instructions</string>
    <string name="ok">OK</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_notifications">Notifications</string>
    <string name="bottom_nav_account">Account</string>
    <string name="bottom_nav_menu">Menu</string>
    <string name="login_or">Or</string>
    <string name="none">none</string>

    <string name="copy_password">Copy Password</string>
    <string name="copy_username">Copy Username</string>
    <string name="copied_toast">Copied to clipboard</string>
    <string name="show_password">Show Password</string>
    <string name="share">Share</string>

    <string name="fingerprint_tittle">Fingerprint Authentication</string>
    <string name="fingerprint_instructions">Place your fingertip on the Home button to verify your identity</string>

    <string name="no_data">No resources found, please start creating!</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="deleted_msg">Deleted</string>
    <string name="share_title">Who do you want to share the folder with?</string>
    <string name="share_desc">Note: The user must be a MyPass user.</string>
    <string name="share_success">Folder shared successfully.</string>

    <string name="copyright">All rights reserved. © MyPass 2019</string>
    <string name="password_edit_title">Edit Password information</string>
    <string name="update">Update</string>
    <string name="edit_folder_tittle">Edit the name of the folder</string>
    <string name="folder">Folder</string>
    <string name="secret">Secret</string>
    <string name="create_prompt">What would you like to create?</string>
    <string name="select_folder">Select the parent folder:</string>
    <string name="secret_create_title">New secret</string>
    <string name="create">Create</string>
    <string name="create_folder_title">Create folder</string>
    <string name="create_folder_message">Enter the folder name:</string>
    <string name="updated">Updated</string>
    <string name="update_folder_title">Update folder</string>
    <string name="open_site">Open site</string>
    <string name="uril_empty">Secret URI is empty</string>
    <string name="error_name">Name can only contain letters, uppercase and lowercase allowed.</string>
    <string name="error_uri">Must be a valid url</string>
    <string name="error_username">Username cannot be empty</string>
    <string name="error_pass">Password cannot be empty</string>
    <string name="shared_with">Shared with:</string>
    <string name="email">Email</string>
    <string name="error_email">Should be a valid email address.</string>

</resources>
