<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/copy_username"
        android:icon="@drawable/icon_user_black"
        android:title="@string/copy_username" />
    <item
        android:id="@+id/copy_password"
        android:icon="@drawable/icon_key_black"
        android:title="@string/copy_password" />
    <item
        android:id="@+id/show_password"
        android:icon="@drawable/icon_eye_black"
        android:title="@string/show_password" />
    <item
        android:id="@+id/open_site"
        android:icon="@drawable/icon_browser_black"
        android:title="@string/open_site" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/icon_edit_black"
        android:title="@string/edit" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/icon_delete_red"
        android:title="@string/delete" />
</menu>